# neuralwhisper

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  deployment_log.txt  docker-compose.yml  generation_log.txt  setup_github.bat  vercel.json
.github/: CI_CD.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: all-power-deploy.yml  speed-deploy.yml
docs/: ARCHITECTURE.md
documentation/: FUTURE_POTENTIAL.md  RESEARCH_NOTES.md  RESEARCH_PAPER.md  SITE_ARCHITECTURE.md  VOICE_LAB_TECHNICAL.md  VOICE_LAB_USER_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.js
frontend/public/: test_upload.txt
frontend/public/voices/: voice-manifest.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: GlobalError.jsx  audiobook-shelf.jsx  heavy-background.jsx  liquid-slider.jsx  url-input.jsx  video-background.jsx  voice-lab-background.jsx  voice-lab-page.jsx  voice-lab.jsx  voice-selector.jsx  welcome-hero.jsx
frontend/src/lib/: asmr-brain.js  audio-effects.js  document-processor.js  dsp-wasm-loader.js  embedding-generator.js  f5-tts-diffusion.js  hive-mind.js  liquid-shader.js  pdf-parser.js  (+17 more)
rust-dsp/: Cargo.toml  build-wasm.ps1
rust-dsp/src/: lib.rs
scripts/: automate_deploy.ps1  benchmark-dsp.js  benchmark-wasm.mjs  generate_audiobooks.py  generate_f5_embeddings.py  process_samples.py  requirements.txt  test_audio_generation.py
scripts/test_output/: test_embedding.json
(+4 files in other folders)
