[package]
name = "sanctuary-dsp"
version = "0.1.0"
edition = "2021"
authors = ["ASMR Reader Team"]
description = "High-performance Rust/WASM DSP for The Living Sanctuary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rustfft = "6.1"
num-complex = "0.4"
realfft = "3.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
